added work and contact information

--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
         </nav>
     </header>
     <article id="about">
-        <img id="subtitlePhoto" src="./Assets/SelfPortrait-2.jpg" alt="Author Photo">
-        <h2>
-            Mobile First Responsive Design and Developement
+        <h2 id="subTitle">
+            Design and Developement
         </h2>
-        <h4>
+        <img id="subtitlePhoto" src="./Assets/SelfPortrait-2.jpg" alt="Author Photo">
+        <h3>
             About Me
-        </h4>
+        </h3>
         <p id="paragraphAboutMe">
             Front-end web developer with a background in Graphic Design to create more
             user friendly websites. Recently earned a certificate in full stack
-            development from SMU and developed skills in Css, JavaScript, React.js, 
+            development from SMU and developed skills in CSS, JavaScript, React.js, 
             and responsive web design. Known as a tenacious and problem solver
             developer, with a primary interest in mobile first design and development.
             Aim for every website created to engage the user in accessible and memorable
@@ -39,11 +39,15 @@
         </p>
     </article>
     <article id="work">
-        <h4 id="titleWork">
+        <h3 id="titleWork">
             Work
-        </h4>
+        </h3>
         <section id="workProjects">
-            
+            <img class="project" src="./Assets/Sherman-Logo-Alone.jpg" alt="Horiseon Accessiblity Refactor">
+            <img class="project" src="./Assets/Sherman-Logo-Alone.jpg" alt="Luna Compact Chair Webpage">
+            <img class="project" src="./Assets/Sherman-Logo-Alone.jpg" alt="Genie Device Registration">
+            <img class="project" src="./Assets/Sherman-Logo-Alone.jpg" alt="Coping Journal">
+            <img class="project" src="./Assets/Sherman-Logo-Alone.jpg" alt="El Yunque Website">
         </section>
     </article>
     <!--<article id="resume">
@@ -98,12 +102,14 @@
     </article>-->
 </body>
 <footer>
-    <h4>
+    <h3>
         Contact Me
-    </h4>
-    <a href="555.555.5555">555.555.5555</a>
-    <a href="https://www.harleysherman.com">harleysherman.com</a>
-    <a href="https://www.linkedin.com/in/harley-sherman-a9680b18b/">LinkedIn</a>
-    <a href="https://github.com/harleysherman">GitHub</a>
+    </h3>
+    <ul id="contactList">
+        <li><a href="555.555.5555">555.555.5555</a></li>
+        <li><a href="https://www.harleysherman.com">harleysherman.com</a></li>
+        <li><a href="https://www.linkedin.com/in/harley-sherman-a9680b18b/">LinkedIn</a></li>
+        <li><a href="https://github.com/harleysherman">GitHub</a></li>
+    </ul>
 </footer>
 </html>
