changed titles to the side, fixed responsive deign in work projects and contact page

--- a/index.html
+++ b/index.html
@@ -23,11 +23,13 @@
         </nav>
     </header>
     <!--About section includes author photo, about title, and paragraph-->
-    <article id="about">
+    <article>
         <h2 id="subTitle">
-            Design and Developement
+            Design and Development
         </h2>
         <img id="subtitlePhoto" src="./Assets/SelfPortrait-2.jpg" alt="Author Photo">
+    </article>
+    <article id="about">
         <h3 id="aboutTitle">
             About Me
         </h3>
@@ -50,33 +52,35 @@
         <section id="workProjects">
             <figure class="imageContainer" id="mainHighlightProj">
                 <p>
-                    Horiseon Accessiblity Refactor
+                    <a href="https://harleysherman.github.io/horizon-accessiblity-refactor/">
+                        Horiseon Accessiblity Refactor
+                    </a>
                 </p>
                 <img class="project" src="./Assets/Sherman-Logo-Alone.jpg" alt="Horiseon Accessiblity Refactor">
             </figure>
 
             <figure class="imageContainer">
                 <p>
-                    Luna Compact Chair Site
+                    <a href="https://harleysherman.com/luna-product-page">Luna Compact Chair Site</a>
                 </p>
                 <img class="project" src="./Assets/Sherman-Logo-Alone.jpg" alt="Luna Compact Chair Webpage">
             </figure>
 
             <figure class="imageContainer">
                 <p>
-                    Genie Devie Registration Application
+                    <a href="https://harleysherman.com/device-registration">Genie Devie Registration Application</a> 
                 </p>
                 <img class="project" src="./Assets/Sherman-Logo-Alone.jpg" alt="Genie Device Registration">
             </figure>
             <figure class="imageContainer">
                 <p>
-                    Coping Journal
+                    <a href="https://harleysherman.com/coping-journal">Coping Journal</a> 
                 </p>
                 <img class="project" src="./Assets/Sherman-Logo-Alone.jpg" alt="Coping Journal">
             </figure>
             <figure class="imageContainer">
                 <p>
-                    El Yunque Website
+                    <a href="https://harleysherman.com/el-yunque">El Yunque Website</a> 
                 </p>
                 <img class="project" src="./Assets/Sherman-Logo-Alone.jpg" alt="El Yunque Website">
 
@@ -138,11 +142,12 @@
 <!--Footer contains Contact info: phone number, portfolio site, linkedIn, and github-->
 <footer>
     <h3 id="contactMeTitle">
-        Contact Me
+        Contact
     </h3>
     <ul id="contactList">
         <li><a href="555.555.5555">555.555.5555</a></li>
         <li><a href="https://www.harleysherman.com">harleysherman.com</a></li>
+        <li><a href = "mailto: hello@harleysherman.com">hello@harleysherman.com</a></li>
         <li><a href="https://www.linkedin.com/in/harley-sherman-a9680b18b/">LinkedIn</a></li>
         <li><a href="https://github.com/harleysherman">GitHub</a></li>
     </ul>
